--- a/client/src/App.css
+++ b/client/src/App.css
@@ -220,10 +220,12 @@ th {
     padding: 2px;
     text-align: center;
     border: 1px solid grey;
+    text-transform: capitalize;
 }
 
 td {
     font-size: smaller;
+    text-transform: lowercase;
 }
 
 th {
@@ -248,6 +250,7 @@ th {
 .control-wrapper {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 @media screen and (max-width:800px) {
